# intelli-api

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  askama.toml  build.rs  cpy.c  docker-compose.yml  intelli-api.service  keydb.conf  old.toml  postgresql.conf
.github/workflows/: deployment.yml  rust-ci.yml
capnp/: car_motion.capnp  event_data.capnp  final_classification.capnp  packet_header.capnp  participants.capnp  session_data.capnp  session_history.capnp
certs/: cert.pem  intelli.gerardz.de.crt  intelli.gerardz.de.key  key.pem
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/config/: local_tracing.rs  mod.rs
crates/api/src/handlers/: mod.rs
crates/api/src/handlers/admin/: mod.rs
crates/api/src/handlers/auth/: discord.rs  mod.rs  user.rs  verify.rs
crates/api/src/handlers/championships/: admin.rs  mod.rs  service.rs  stream.rs
crates/api/src/handlers/user/: admin.rs  mod.rs
crates/api/src/middlewares/: admin.rs  authenticated.rs  login.rs  mod.rs  tracing.rs
crates/api/src/routes/: api.rs
crates/api/src/states/: app.rs
crates/auth/: Cargo.toml
crates/cache/: Cargo.toml
crates/db/: Cargo.toml
crates/db/migrations/: V1__init.sql
crates/db/src/: db.rs  lib.rs
crates/db/src/cache/: championship.rs  driver.rs  mod.rs  token.rs  user.rs
crates/discord/: Cargo.toml
crates/discord/src/: discord.rs
crates/entities/: Cargo.toml
crates/entities/src/: championship.rs  driver.rs  entities.rs  user.rs
crates/error/: Cargo.toml
crates/f1-telemetry/: Cargo.toml
crates/id-generator/: Cargo.toml
crates/intelli-core/: Cargo.toml
crates/intelli-core/src/repositories/: championship.rs  discord.rs  driver.rs  mod.rs  server.rs  user.rs
crates/intelli-core/src/services/: championship.rs  driver.rs  email.rs  mod.rs  token.rs  user.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: metrics.rs
crates/password-hash/: Cargo.toml
crates/structs/: Cargo.toml
crates/structs/src/: auth.rs  championship.rs  lib.rs  server.rs  structs.rs  templates.rs  token.rs  user.rs
crates/structs/templates/: reset_password.stpl
crates/telemetry/: Cargo.toml
crates/telemetry/src/: f1.rs  firewall.rs  handler.rs  lib.rs  manager.rs  service.rs  telemetry.rs  utils.rs
crates/telemetry/src/f1_structs/: mod.rs  own.rs  protos.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  token.rs
crates/token_manager/: Cargo.toml
crates/token_manager/src/: persistence.rs  token.rs  token_manager.rs
crates/utils/: Cargo.toml
migrations/: 20230914175122_initial.sql  20230914185427_automatic-timestamps.sql  20230914185948_automatic-timestamps2.sql  20230914191114_user_championships.sql  20230915180324_unsigned_ids.sql  20230916201055_user_image.sql  20230916201612_before_role.sql  20230918174602_google_auth.sql  20230918180007_changed_name.sql  20230918193131_provider_type.sql  20231102230436_championship_owner.sql  20231110133534_championship_data.sql  20231110135135_driver_count_default.sql  20231110135440_championship_data.sql  20231110202819_indexes.sql  20231113143342_init-postgres.sql  20231113155412_championship.sql  20231113160244_championships_conn.sql  20231113203856_nuill_driver_count.sql  20231113210626_refactor_season_type.sql  20231114225011_tables.sql  20231119211321_saved_sessions.sql  V10__changed_password_len.sql  V1__init.sql  V1__users.sql  V2__championships.sql  V3__user_champioships_relations.sql  V4__saved_sessions.sql  V5__championship_timestams.sql  V7__users_update.sql  V8__remove_championship_constraints.sql  V9__users_email_index.sql  updated_at_championship.sql  updated_at_users.sql
old/: Cargo.toml
old/src/: main.rs
protos/: car_motion.fbs  car_motion.proto  car_motion_generated.rs  event_data.fbs  event_data.proto  event_data_generated.rs  f1.proto  final_classification.fbs  final_classification.proto  final_classification_generated.rs  packet_header.fbs  packet_header.proto  packet_header_generated.rs  participants.fbs  participants.proto  participants_generated.rs  session_data.fbs  session_data.proto  session_data_generated.rs  session_history.fbs  session_history.proto  session_history_generated.rs
public/: site.webmanifest
public/css/: app.css  normalize.css
public/js/: app.js
src/: f1-wrapper.rs  main.rs  protos.rs
src/cache/: championship.rs  driver.rs  f123.rs  mod.rs  token.rs  user.rs
src/capnp/: car_motion_capnp.rs  event_data_capnp.rs  final_classification_capnp.rs  mod.rs  packet_header_capnp.rs  participants_capnp.rs  session_data_capnp.rs  session_history_capnp.rs
src/config/: constants.rs  database.rs  local_tracing.rs  mod.rs  schema.cql  tracing.rs
src/dtos/: auth.rs  championship.rs  email.rs  f123_dto.rs  mod.rs  server.rs  statements.rs  token.rs  user.rs  views.rs
src/entity/: championship.rs  driver.rs  event_data.rs  mod.rs  race.rs  result.rs  saved_sessions.rs  user.rs
src/error/: app.rs  cache.rs  championship.rs  common.rs  f1.rs  f123.rs  firewall.rs  mod.rs  socket.rs  token.rs  user.rs
src/handlers/: mod.rs
src/middlewares/: admin.rs  authenticated.rs  login.rs  mod.rs
src/protos/: batched.rs  car_motion_data.rs  event_data.rs  final_classification.rs  mod.rs  packet_header.rs  participants.rs  session_data.rs  session_history.rs
src/repositories/: championship.rs  discord.rs  driver.rs  f123.rs  google.rs  mod.rs  saved_session.rs  server.rs  user.rs
src/response/: error.rs  mod.rs
src/routes/: admin.rs  api.rs  mod.rs
src/services/: championship.rs  driver.rs  email.rs  f123.rs  firewall.rs  mod.rs  saved_session.rs  token.rs  user.rs
src/states/: app.rs  auth.rs  auth_state.rs  mod.rs  user.rs  user_state.rs  web_socket.rs
src/structs/: auth.rs  championship.rs  email.rs  mod.rs  server.rs  templates.rs  token.rs  user.rs
src/test/: car_motion_data.rs  event_data.rs  mod.rs  participants.rs  (+2 more)
templates/: email_verified.stpl  password_changed.html  reset_password.html  verify.html  verify_email.html  verify_email.stpl
views/: 404.html  index.html  layout.html  login.html  register.html
(+109 files in other folders)
