[package]
name = "intelli-api"
edition = "2021"
version = "0.6.1"
readme = "README.md"
description = "F1 Championship Tool"
authors = ["Gpeaky <gerardjoven2020@hotmail.com>"]
repository = "https://github.com/Intelli-Telemetry/api"

[build-dependencies]
prost-build = "0.13"

[dependencies]
ring = "0.17"
prost = "0.13"
tracing = "0.1"
bit-set = "0.8"
base64 = "0.22"
ntex-cors = "2"
dotenvy = "0.15"
sailfish = "0.8"
mimalloc = "0.1"
serde_trim = "1"
jsonwebtoken = "9"
quick_cache = "0.6"
postgres-derive = "0.4"
deadpool-postgres = "0.14"
tokio = { version = "1", features = ["full"] }
regex = { version = "1", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["v110"] }
tracing-log = { version = "0.2", features = ["ahash"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["rc", "unstable"] }
ntex = { version = "2", features = ["tokio", "openssl"] }
ahash = { version = "0.8", features = ["compile-time-rng"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
dashmap = { version = "6", features = ["inline", "raw-api"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
parking_lot = { version = "0.12", features = ["arc_lock", "nightly"] }
garde = { version = "0.20", features = ["derive", "email", "email-idna"] }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "pool",
] }
brotli = { version = "6", features = [
    "disable-timer",
    "simd",
    "vector_scratch_space",
] }


[profile.release]
debug = false           # Added Debug for trying to get hot spots in the code
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
