[workspace.lints.clippy]
new_without_default = "allow"

[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/intelli-core",
    "crates/password-hash",
    "crates/db",
    "crates/entities",
    "crates/error",
    "crates/id-generator",
    "crates/structs",
    "crates/telemetry",
    "crates/token_manager",
    "crates/utils",
    "crates/metrics",
]

default-members = ["crates/api"]

[workspace.dependencies]

#
# Workspace member crates
#
api = { path = "crates/api" }
db = { path = "crates/db" }
entities = { path = "crates/entities" }
error = { path = "crates/error" }
id-generator = { path = "crates/id-generator" }
intelli-core = { path = "crates/intelli-core" }
metrics = { path = "crates/metrics" }
password-hash = { path = "crates/password-hash" }
structs = { path = "crates/structs" }
telemetry = { path = "crates/telemetry" }
token_manager = { path = "crates/token_manager" }
utils = { path = "crates/utils" }

#
# External Crates
#
memchr = "2"
ring = "0.17"
prost = "0.13"
tracing = "0.1"
ntex-cors = "2"
dotenvy = "0.15"
sailfish = "0.9"
serde_trim = "1"
base64-simd = "0.8"
quick_cache = "0.6"
prost-build = "0.13"
postgres-derive = "0.4"
deadpool-postgres = "0.14"
tracing-opentelemetry = "0.24"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
openssl = { version = "0.10", features = ["v110"] }
regex = { version = "1", features = ["unstable"] }
tracing-log = { version = "0.2", features = ["ahash"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["rc", "unstable"] }
ntex = { version = "2", features = ["tokio", "openssl"] }
ahash = { version = "0.8", features = ["compile-time-rng"] }
dashmap = { version = "6", features = ["inline", "raw-api"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
parking_lot = { version = "0.12", features = ["arc_lock", "nightly"] }
garde = { version = "0.20", features = ["derive", "email", "email-idna"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "metrics"] }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
mimalloc = { version = "0.1", features = [
    "extended",
    "local_dynamic_tls",
    "override",
] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "pool",
] }

[profile.release]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
