[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
token = { path = "../token" }
error = { path = "../error" }
structs = { path = "../structs" }
entities = { path = "../entities" }
telemetry = { path = "../telemetry" }
intelli-core = { path = "../intelli-core" }

ntex = { workspace = true }
tokio = { workspace = true }
garde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
mimalloc = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }

ntex-cors = "2"
openssl = { version = "0.10", features = ["v110"] }
tracing-log = { version = "0.2", features = ["ahash"] }
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }

[lints]
workspace = true
