[package]
name = "api"
edition = "2021"
version = "0.6.4"
description = "Intelli telemetry public api"
authors = ["Gpeaky <gerardjoven2020@hotmail.com>"]
repository = "https://github.com/Intelli-Telemetry/api"

[lints]
workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
db.workspace = true
token_manager.workspace = true
error.workspace = true
structs.workspace = true
entities.workspace = true
telemetry.workspace = true
intelli-core.workspace = true
metrics.workspace = true
ntex.workspace = true
tokio.workspace = true
garde.workspace = true
chrono.workspace = true
tracing.workspace = true
dotenvy.workspace = true
mimalloc.workspace = true
dashmap.workspace = true
tokio-stream.workspace = true
ntex-cors.workspace = true
openssl.workspace = true
opentelemetry.workspace = true
