[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
path = "src/entities.rs"
doctest = false

[dependencies]
error.workspace = true
ntex.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
deadpool-postgres.workspace = true
postgres-derive.workspace = true
postgres-types.workspace = true
