[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.13"

[dependencies]
error = { path = "../error" }
structs = { path = "../structs" }
intelli-core = { path = "../intelli-core" }

serde = { workspace = true }
chrono = { workspace = true }
ntex = { workspace = true }
tokio = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

memchr = "2"
prost = "0.13"
regex = { version = "1", features = ["unstable"] }

[lints]
workspace = true
