[package]
name = "token"
version = "0.1.0"
edition = "2021"

[dependencies]
error = { path = "../error" }

ring = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
base64-simd = { workspace = true }

[lints]
workspace = true
