[package]
name = "token_manager"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
path = "src/token_manager.rs"
doctest = false

[dependencies]
utils.workspace = true
error.workspace = true
ring.workspace = true
tokio.workspace = true
dashmap.workspace = true
base64-simd.workspace = true
tracing.workspace = true
